add UniversityService with heaps of methods